Added rwx permissions inheritance for user tomcat on TOMCAT_HOME in permission setup scripts

--- a/roles/tomcat-access/defaults/main.yml
+++ b/roles/tomcat-access/defaults/main.yml
@@ -9,6 +9,6 @@ tomcat_user_password: "tymczasowe@123"
 # dostęp tylko do odczytu: ro
 # dostęp do odczytu i zapisu: rw
 # możliwość zarządzania usługą tomcata: operator
-tomcat_user_access_type: ro
+tomcat_user_access_type: operator
 
 script_directory: /opt/scripts
